--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,12 @@
             <groupId>org.icefaces</groupId>
             <artifactId>icefaces-ace</artifactId>
             <version>4.3.0</version>
-            <scope>provided</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.icefaces</groupId>-->
+<!--            <artifactId>icefaces-compat</artifactId>-->
+<!--            <version>3.3.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
@@ -53,18 +57,6 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>5.4.18.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
