--- a/apacheAnt.properties
+++ b/apacheAnt.properties
@@ -10,3 +10,8 @@ web=${main}/webapp/WEB-INF/web.xml
 test_name=CheckAreaTest
 localization=en.properties
 src_old=./src_old
+altProp=./alt.properties
+changeClass=${main}/java/CheckArea.java
+newClass=${main}/java/AreaController.java
+changeTest=${test}/java/CheckAreaTest.java
+newTest=${test}/java/AreaControllerTest.java
