--- a/en.properties
+++ b/en.properties
@@ -1,9 +1,6 @@
-Лабораторная=Laboratory work
-Вариант=Variant
-Группа=Study group
-На главную=To main
-Отправить=Send
-На стартовую=To start
-Вы не ввели=You haven't chosen
-должен быть числом=must be numeric
-не принадлежит=isn't in
+Laboratory=Лабораторная
+Variant=Вариант
+Study_group=Группа
+toMain=На главную
+Send=Отправить
+toStart=На стартовую
